# segdatakit

./: LICENSE  README.md  pyproject.toml
configs/: cityscapes.yaml  coco.yaml  template.yaml
scripts/: convert.py  validate.py
segdatakit/: __init__.py  dali_loader.py  dataloader.py  readers.py  transforms.py  validators.py  writers.py
tests/: test_readers.py  test_validators.py  test_writers.py
